### 3.4.1 (Released 20XX-XX-XX) ###
- Handle searching on repetitions where submitted search field contains an
  index.
- Allow container data to be read (and base64 encoded) by using a
  RFMcontainer=base64 query string parameter on record and layout level
  read operations.

### 3.4.0 (Released 2015-05-07) ###
- Experimental PDO: MySQL improvements.
- Move .dict format internal to RESTfm and add import handling. Import was
  not possible with XSL 1.1.
- Disable execution profiling output when diagnostics is disabled.
- Add data dumping as a diagnostic aid.
- RESTfm released as Open Source under The MIT Licence (see LICENSE file).
- RESTfm Version Control System moved to git (hosted on GitHub).
- Fix report.php FMS connection diagnostic for FMS11 compatibility.

### 3.3.0 (Released 2015-02-20) ###
- Execution profiling info: Real/wall time (ms), Peak mem usage, Max mem limit.
- Experimental PDO support for alternate database backends. Currently MySQL
  is supported.
- Fix "change user" link when using html format to prevent cancel loop.
- RESTfmSync additions and fixes (see code/RESTfmSync/CHANGELOG).

### 3.2.0 (Released 2015-01-20) ###
- FileMaker 13v5 support.
- Mac OS X Yosemite (10.10) support.
- Cleanup code warnings on newer PHP.
- Prevent error logs being served to clients when diagnostics is disabled.
- RESTfmSync code updated (3.2.0).
- Improved FileMaker Server detection in report.
- Update SSL checks in report for changes in libcurl.
- New configuration options to control strict SSL certificate checking between
  RESTfm and FileMaker Server, and in report self checks.

### 3.1.1 (Released 2014-10-22) ###
- Add RFMsquash2XX flag to return HTTP 200 for any 2XX response.
- Fix bug where unique-key-recordID returns 200 OK instead of 401 Unauthorized.
- RESTfmSync remove unused code and update documentation.

### 3.1.0 (Released 2014-09-16) ###
- Significant speed improvements to RESTfmSync.
- Improve RFMformat parameter to allow override of